# Anki-animated-background

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  README.md  __init__.py  build_support.py  deploy.py  package.py  pyproject.toml
.github/workflows/: release.yml
assets/default_media/Wallpapers_anki/Nenuphars/: credits.txt
assets/default_media/Wallpapers_anki/Smoke_colored/: credits.txt
src/common/: constants.py  utils.py
src/config/: config_manager.py
src/injector/: background_controller.py  webview_injector.py
src/view/: branding.py  settings_dialog.py
tests/: fake_aqt.py  test_config_manager.py  test_import_policy.py  test_settings_dialog.py
user_files/media/Wallpapers_anki/Nenuphars/: credits.txt
user_files/media/Wallpapers_anki/Smoke/: credits.txt
user_files/media/Wallpapers_anki/Smoke_colored/: credits.txt
